<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivAdapterOnBoardImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4x"
        android:scaleType="centerCrop"
        android:src="@drawable/img_onboarding1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <!--        android:src="@drawable/img_onboarding2"-->
    <!--        />-->


    <LinearLayout
        android:id="@+id/frameOnBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10x"
        android:orientation="vertical"
        android:padding="@dimen/margin_1x"
        app:layout_constraintBottom_toTopOf="@+id/btnOnBoarding1"
        android:layout_marginBottom="@dimen/margin_1x">

        <TextView
            android:id="@+id/tvOnBoardingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/lbl_title_on_boarding_1"
            android:textAlignment="center"
            android:textSize="24dp"
            />

        <TextView
            android:id="@+id/tvOnBoardingSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/lbl_subtitle_on_boarding_1"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/margin_3x"
            android:layout_marginEnd="@dimen/margin_3x"
            app:layout_constraintTop_toBottomOf="@id/tvOnBoardingTitle"
            android:textSize="14dp"
            />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOnBoarding1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_on_boarding"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/frameNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/frameNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_2x"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>