<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".modules.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_1x"
        app:cardCornerRadius="@dimen/margin_2x"
        android:elevation="@dimen/margin_1x">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_2x"/>

            <LinearLayout
                android:id="@+id/frameLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2x"
                android:orientation="vertical"
                android:padding="@dimen/margin_1x"
                app:layout_constraintTop_toBottomOf="@+id/ivLogin"
                app:layout_constraintBottom_toTopOf="@id/btnLogin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_half"
                    android:text="@string/lbl_email"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_email_address"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorUnselected"
                        android:textColorHint="@color/colorUnselected" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/margin_half"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/tvLoginEmailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_1_5x"
                    android:drawablePadding="@dimen/margin_half"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    tools:text="Email is required" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_half"
                    android:text="@string/lbl_password"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLoginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorUnselected"
                        android:textColorHint="@color/colorUnselected" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="@dimen/margin_half"
                    android:background="@color/colorGray" />

                <TextView
                    android:id="@+id/tvLoginPasswordError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_1x"
                    android:drawablePadding="@dimen/margin_half"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    tools:text="Email is required" />


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF0036"
                app:cornerRadius="@dimen/margin_2x"
                android:layout_marginStart="@dimen/margin_2x"
                android:layout_marginEnd="@dimen/margin_2x"
                android:layout_marginTop="@dimen/margin_4x"
                android:layout_marginBottom="@dimen/margin_1x"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/lbl_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/frameLoginForm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>